<resources>
    <string name="app_name">FollowAssistant</string>
    <string name="app_splash_title">Follow Assistant</string>
    <string name="app_splash_loading">Loading...</string>
    <string name="app_login_follow">Follow</string>
    <string name="app_login_assistant">Assistant</string>
    <string name="app_login_username_hint">Instagram Username</string>
    <string name="app_login_password_hint">Instagram Password</string>
    <string name="app_login_Login">Login</string>
    <string name="app_main_title">Get Coins</string>
    <string name="app_main_bottom_first">Earn Coins</string>
    <string name="app_main_bottom_second">+ Likes</string>
    <string name="app_main_bottom_third">+ Followers</string>
    <string name="app_main_bottom_forth">More</string>
    <string name="app_main_coins_number">1000</string>
    <string name="app_main_username">Rachel Scott</string>
    <string name="app_main_skip">Skip</string>
    <string name="app_main_like">Like  +1</string>
    <string name="app_main_follow_username">Robert Tucker</string>
    <string name="app_main_follow">Follow +4</string>
    <string name="app_likefragment_top">Tap a photo/video to get likes</string>
    <string name="app_make_orders">Make Orders</string>
    <string name="app_make_orders_likes_num">x 100</string>
    <string name="app_make_orders_coins_num">20</string>
    <string name="app_get_followers_posts">posts</string>
    <string name="app_get_followers_posts_num">9</string>
    <string name="app_get_followers_followers">followers</string>
    <string name="app_get_followers_followers_num">122</string>
    <string name="app_get_followers_following">following</string>
    <string name="app_get_followers_following_num">213</string>
    <string name="more_fragment_item_daily_bonus">Daliy Bonus</string>
    <string name="more_fragment_item_store">Store</string>
    <string name="more_fragment_item_logout">Logout</string>
    <string name="more_fragment_item_share">Share</string>
    <string name="more_fragment_item_review">Review Our App</string>
    <string name="more_fragment_item_feedback">Feedback</string>
    <string name="more_fragment_feedback_submit">Submit</string>
    <string name="more_fragment_daily_bonus_top">Everyday you come back and reclaim your prize</string>
    <string name="more_fragment_daily_bonus_num">15</string>
    <string name="more_fragment_daily_day">DAY 1</string>
    <string name="more_fragment_daily_bonus_bottom">Get Prize</string>
</resources>
