<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/ll_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:weightSum="4">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/default_head" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_get_followers_posts_num"
                android:textColor="@color/likes_fragment_top_text"
                android:textSize="@dimen/make_orders_item_num"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_get_followers_posts"
                android:textSize="@dimen/coins_num_textsize" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_get_followers_followers_num"
                android:textColor="@color/likes_fragment_top_text"
                android:textSize="@dimen/make_orders_item_num"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_get_followers_followers"
                android:textSize="@dimen/coins_num_textsize" />
        </com.zhy.autolayout.AutoLinearLayout>


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_get_followers_following_num"
                android:textColor="@color/likes_fragment_top_text"
                android:textSize="@dimen/make_orders_item_num"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_get_followers_following"
                android:textSize="@dimen/coins_num_textsize" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@id/ll_user_info"
        android:layout_marginTop="30px"
        android:background="@color/make_orders_item_line"></View>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_followers_orders_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_line"></android.support.v7.widget.RecyclerView>
</com.zhy.autolayout.AutoRelativeLayout>